<resources>
    <string name="app_name">FeverFinder</string>
    <string name="new_survey_string">Start New Survey</string>
    <string name="personal_info_title">Personal Information</string>
    <string name="community_name">Community name</string>
    <string name="village">Village</string>
    <string name="town">Town</string>
    <string name="state">State</string>
    <string name="lga">LGA</string>
    <string name="submit">Submit</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
